--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ jdk:
   - oraclejdk7
   - openjdk7
   - oraclejdk8
+
+matrix:
+  exclude:
+    -os: osx
+     jdk: openjdk7
+    -os: osx
+     jdk: oraclejdk7
+
+before_install:
+  - echo java -version
+  - jdk_switcher ; [[ "$?" -eq 127 ]] && alias jdk_switcher=echo
+
