--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
+matrix:
+  include:
+    - os: linux
+      jdk: oraclejdk8
+    - os: linux
+      jdk: oraclejdk7
+    - os: linux
+      jdk: openjdk7
+    - os: osx
+      osx_image: xcode8
+
 language: java
-
-os:
-  - linux
-  - osx
-
-jdk:
-  - oraclejdk7
-  - openjdk7
-  - oraclejdk8
 
 before_install:
   - echo java -version
