Removing code to dectect java sdk, adding actual running of script

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
 
 language: java
 
-before_install:
-  - echo java -version
-  - which jdk_switcher || alias jdk_switcher='echo disabled_jdk_switcher'
+script:
+  - ./gradlew run
+
 
