--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,18 @@ matrix:
     - os: linux
       jdk: openjdk7
     - os: osx
+      osx_image: xcode8.2
+    - os: osx
+      osx_image: xcode8.1
+    - os: osx
       osx_image: xcode8
+    - os: osx
+      osx_image: xcode7.3
+    - os: os
+      osx_image: xcode6.4
 
 language: java
 
 script:
   - ./gradlew run
-
 
